# aion_self_org_self_edu_mas

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  HANDOFF.md  LICENSE  README.md  README.ru.md  SAFETY.md  START-HERE.md  aion-populations-setup.py  docker-compose.yml  outcomes.csv  pyproject.toml
.claude/skills/aion-populations/: SKILL.md
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  DASHBOARD-SPEC.md  MIGRATION.md  QUICKSTART.md  walkthrough.ru.md
examples/: 01-demo-synthetic.md  02-bring-your-own-anchor.md
src/aionpop/: __init__.py  __main__.py  certify.py  claude_init.py  cli.py  crypto.py  experiment.py  factorial.py  gtm.py  gtm_outcomes.py  heartbeat.py  ingest.py  init.py  levers.py  llm.py  population.py  population_game.py  share.py  signing.py
src/aionpop/anchors/: __init__.py  base.py  csv_anchor.py  synthetic.py
src/aionpop/dashboard/: __init__.py  server.py
src/aionpop/dashboard/static/: index.html
src/aionpop/safety/: __init__.py  anchor_gate.py  sandbox.py
tests/: test_anchor_gate.py  test_certify.py  test_claude_init.py  test_crypto.py  test_factorial.py  test_gtm.py  test_gtm_outcomes.py  test_heartbeat.py  test_ingest.py  test_init.py  test_llm.py  test_robustness.py  test_signing.py
