[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aion-populations"
version = "0.1.0"
description = "Self-organizing, self-educating agent populations — improvements are certified against an external anchor, not self-graded."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Evgeny Khata", email = "ev@xataco.com" }]
keywords = [
  "multi-agent", "self-organizing", "self-improving", "agent-population",
  "evolution", "fdr", "external-anchor", "ai-safety", "agent-ops",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
# Core engine is STDLIB-ONLY on purpose: zero-friction install, bulletproof CI,
# offline demo. Heavier research modules (numpy harness, full evolution engine)
# arrive via the migration plan in docs/MIGRATION.md as an optional extra.
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
aionpop = "aionpop.cli:main"

[project.urls]
Homepage = "https://github.com/EvXata/aion_self_org_self_edu_mas"
Documentation = "https://github.com/EvXata/aion_self_org_self_edu_mas/tree/main/docs"
Safety = "https://github.com/EvXata/aion_self_org_self_edu_mas/blob/main/SAFETY.md"

[tool.setuptools.packages.find]
where = ["src"]
